Fix missing color change

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -386,7 +386,7 @@ article.chapter1 {
         *,
         *:visited,
         *:active {
-            @extend .blue;
+            @extend .orange;
         }
   }
 
